--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "vue-windows": "^0.1.3",
     "vue-youtube-embed": "^2.0.2",
     "vue2-dragula": "^2.4.3",
+    "vue2-selectize": "^1.0.2",
     "vuelidate": "^0.2.0",
     "vuex": "^2.1.1",
     "zxcvbn": "^4.4.1"
