--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "vue-cleave": "^1.1.1",
     "vue-clickaway": "^2.1.0",
     "vue-color": "^2.0.6",
+    "vue-cookie": "^1.1.3",
     "vue-easy-slider": "next",
     "vue-echarts-v3": "^1.0.2",
     "vue-fetch-data": "^0.2.0",
@@ -103,6 +104,7 @@
     "vue-howler": "^0.1.4",
     "vue-instagram": "^1.0.4",
     "vue-instant": "^1.0.0",
+    "vue-localstorage": "^0.1.3",
     "vue-lory": "^0.0.4",
     "vue-masked-input": "^0.2.3",
     "vue-meta": "^0.5.3",
