--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "fractal": "node-sass src/assets/sass/style.scss static/shared/css/style.css -w & fractal start --sync",
     "unit": "cross-env BABEL_ENV=test karma start test/unit/karma.conf.js --single-run",
     "e2e": "node test/e2e/runner.js",
+    "svg": "vsvg -s ./static/svg/src -t ./src/icons",
     "test1": "jest",
     "test": "ava ./test/test-vue.js",
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs",
@@ -34,6 +35,7 @@
     "@frctl/mandelbrot": "^1.0.7",
     "@frctl/nunjucks": "^1.0.2",
     "accounting": "^0.4.1",
+    "autocomplete-vue": "^1.0.1",
     "ava": "^0.18.2",
     "axios": "^0.15.3",
     "bulma": "^0.3.1",
@@ -47,6 +49,7 @@
     "dotenv": "^4.0.0",
     "downloadjs": "^1.4.6",
     "faker": "^3.1.0",
+    "firebase": "^3.7.0",
     "flatpickr": "^2.3.5",
     "flexboxgrid": "^6.3.1",
     "fontfaceobserver": "latest",
@@ -54,10 +57,13 @@
     "hchs-vue-charts": "^1.2.7",
     "highcharts": "^v5.0.7",
     "hint.css": "^2.4.1",
+    "hsy-vue-dropdown": "^0.0.3",
     "jquery": "^3.1.1",
     "json-schema-faker": "^0.4.0",
     "json-server": "^0.9.5",
     "jump.js": "^1.0.2",
+    "less": "^2.7.2",
+    "less-loader": "^2.2.3",
     "lodash": "^4.17.4",
     "markdown-it": "^8.2.2",
     "markdown-it-abbr": "^1.0.4",
@@ -69,6 +75,7 @@
     "nunjucks-date": "^1.2.0",
     "nuxt": "latest",
     "p-immediate": "^2.1.0",
+    "prismjs": "^1.6.0",
     "ramda": "^0.23.0",
     "request-promise": "^4.1.1",
     "simple-vue-validator": "^0.9.9",
@@ -80,6 +87,8 @@
     "vue-avatar": "^2.0.0",
     "vue-awesome": "^2.1.0",
     "vue-awesome-swiper": "^2.3.2",
+    "vue-axios": "^1.2.2",
+    "vue-bem-cn": "^0.1.0",
     "vue-bulma-datepicker": "^1.2.6",
     "vue-bulma-jump": "^0.0.1",
     "vue-bulma-tooltip": "^1.0.2",
@@ -111,10 +120,14 @@
     "vue-meta": "^0.5.3",
     "vue-multiselect": "next",
     "vue-nprogress": "^0.1.5",
+    "vue-offcanvas-simple": "^1.0.3",
     "vue-orderby-mixin": "^1.0.0",
     "vue-picture-input": "^1.4.1",
+    "vue-range-slider": "^0.2.4",
     "vue-router": "^2.2.0",
     "vue-select": "^2.0.0",
+    "vue-split-pane": "^0.0.1",
+    "vue-svgicon": "^1.1.4",
     "vue-sweetalert": "^0.1.16",
     "vue-toast": "^3.0.0",
     "vue-twentytwenty": "^0.1.0",
@@ -124,11 +137,14 @@
     "vue-windows": "^0.1.3",
     "vue-year-calendar": "^0.1.0",
     "vue-youtube-embed": "^2.0.2",
+    "vue2-autocomplete-js": "^0.0.4",
     "vue2-calendar": "^1.0.2",
     "vue2-dragula": "^2.4.3",
+    "vue2-google-maps": "^0.6.0",
     "vue2-selectize": "^1.0.2",
     "vuelidate": "^0.2.0",
     "vuex": "^2.1.1",
+    "vuexfire": "^0.4.0",
     "wallop": "^2.4.1",
     "what-input": "^4.0.6",
     "yaml2json": "^1.0.2",
@@ -240,6 +256,7 @@
     "push-dir": "^0.4.1",
     "request": "^2.34",
     "rimraf": "^2.6.0",
+    "rollup-plugin-vue": "^2.2.21",
     "sass-loader": "^4.1.1",
     "script-loader": "^0.7.0",
     "selenium-server": "^3.0.1",
