--- a/.env
+++ b/.env
@@ -1,5 +1,27 @@
+TFS_REPO=https://tfs.videa.tv/tfs/Development/DevTools/_git/design-coding
+
+DB=wp_videa_design # TODO Configure Zeit's DNS A Record
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=s1mpl3
-TFS_REPO=https://tfs.videa.tv/tfs/Development/DevTools/_git/design-coding
 
+FIREBASE_API_KEY="Xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_AUTH_DOMAIN=".Fir-auth-12e52.firebaseapp.com"
+FIREBASE_DATABASE_URL="https://vuejs-http-94f3e.firebaseio.com/"
+FIREBASE_STORAGE_BUCKET=" Xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+FIREBASE_MESSAGING_SENDER_ID="Xxxxxxxxxxxxxxxxxxxx"
+
+WORDPRESS_REST_API
+GITHUB
+AUTH0
+PUSHER
+ZEIT
+HEROKU
+FORGE
+MONGO
+MYSQL
+SWAPI
+TMDB
+MAILCHIMP
+GOOGLE_ANALYTICS
+GOOGLE_MAPS
