--- a/package.json
+++ b/package.json
@@ -74,11 +74,15 @@
     "nouislider": "^9.2.0",
     "nunjucks-date": "^1.2.0",
     "nuxt": "latest",
+    "octicons": "^5.0.1",
+    "open-color": "^1.4.2",
     "p-immediate": "^2.1.0",
-    "prismjs": "^1.6.0",
+    "primer-css": "^5.0.0",
+    "prismjs": "latest",
     "ramda": "^0.23.0",
     "request-promise": "^4.1.1",
     "simple-vue-validator": "^0.9.9",
+    "store": "^2.0.4",
     "sweetalert2": "^6.3.2",
     "v-tooltip": "^1.1.2",
     "vee-validate": "^2.0.0-beta.23",
@@ -96,6 +100,8 @@
     "vue-chartjs": "^2.3.7",
     "vue-cleave": "^1.1.1",
     "vue-clickaway": "^2.1.0",
+    "vue-clipboard": "^0.0.1",
+    "vue-clipboard2": "^0.0.4",
     "vue-color": "^2.0.6",
     "vue-cookie": "^1.1.3",
     "vue-easy-slider": "next",
@@ -122,6 +128,8 @@
     "vue-nprogress": "^0.1.5",
     "vue-offcanvas-simple": "^1.0.3",
     "vue-orderby-mixin": "^1.0.0",
+    "vue-parallax-js": "^0.0.4",
+    "vue-parallaxy": "^1.0.0",
     "vue-picture-input": "^1.4.1",
     "vue-range-slider": "^0.2.4",
     "vue-router": "^2.2.0",
@@ -147,6 +155,7 @@
     "vuexfire": "^0.4.0",
     "wallop": "^2.4.1",
     "what-input": "^4.0.6",
+    "wpapi": "^1.0.2",
     "yaml2json": "^1.0.2",
     "zxcvbn": "^4.4.1"
   },
@@ -250,7 +259,6 @@
     "postcss-nested": "latest",
     "postcss-responsive-type": "latest",
     "postcss-simple-vars": "latest",
-    "prismjs": "latest",
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "push-dir": "^0.4.1",
